--- a/requirements.txt
+++ b/requirements.txt
@@ -13,9 +13,19 @@ pillow==10.0.0
 onnxruntime==1.15.1; python_version != '3.9' and sys_platform == 'darwin' and platform_machine != 'arm64'
 onnxruntime-coreml==1.13.1; python_version == '3.9' and sys_platform == 'darwin' and platform_machine != 'arm64'
 onnxruntime-silicon==1.13.1; sys_platform == 'darwin' and platform_machine == 'arm64'
-onnxruntime-gpu==1.15.1; sys_platform != 'darwin'
+onnxruntime-gpu==1.18.1
 tensorflow==2.13.0
 opennsfw2==0.10.2
 protobuf==4.23.4
 tqdm==4.65.0
 gfpgan==1.3.8
+nvidia-cublas-cu11==11.11.3.6
+nvidia-cudnn-cu11==8.9.4.25
+nvidia-cufft-cu11==10.9.0.58
+nvidia-curand-cu11==10.3.0.86
+nvidia-cusolver-cu11==11.4.1.48
+nvidia-cusparse-cu11==11.7.5.86
+nvidia-cuda-runtime-cu11==11.8.89
+nvidia-cuda-nvrtc-cu11==11.8.89
+nvidia-nvtx-cu11==11.8.86
+nvidia-npp-cu11==11.8.0.86
